<resources>
    <string name="app_name">BookCase</string>
    <string name="title_cart">Корзина</string>
    <string name="wish">Любимый</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>

    <string name="book_name">Название книги</string>
    <string name="book_author">Автор книги</string>
    <string name="book_description">Описание книги</string>
    <string name="book_detail">О книге</string>
    <string name="book_category">Категория книги</string>
    <string name="book_image">Обложка книги</string>
    <string name="demo_book_price">45 000 сум</string>
    <string name="demo_book_p">45 000</string>
    <string name="demo_book_rating">4.5</string>
    <string name="review">Отзывы</string>
    <string name="write_review">Напишите свой отзыв</string>

    <string name="search_books">Поиск книг</string>
    <string name="select_image">Выбор изображения</string>

    <string name="appPreference">Предпочтения Приложения</string>
    <string name="logged_preference">Зарегистрированные Предпочтения</string>
    <string name="email_preference">Предпочтения Эл.почты</string>
    <string name="name_preference">Предпочтение Имени</string>
    <string name="address_id_preference">Предпочтение Адреса</string>
    <string name="cart_id_preference">Предпочтение Корзины</string>
    <string name="order_id_preference">Заказа Предпочтение</string>
    <string name="wish_id_preference">Желаемое Предпочтение</string>

    <string name="profile">Профиль</string>
    <string name="profile_image">Изображение профиля</string>
    <string name="login">Авторизоваться</string>
    <string name="action_sign_out">Выход</string>
    <string name="action_sign_out_verify">Вы уверены, что хотите выйти из игры?</string>
    <string name="got_account">Вы уже являетесь.?</string>
    <string name="register_now">У вас нет аккаунта? Регистрироваться</string>
    <string name="action_register">Регистрация</string>
    <string name="user_registered">Зарегистрированный пользователь</string>
    <string name="prompt_name">Имя</string>
    <string name="prompt_submit">Представить</string>
    <string name="prompt_email">Эл.почта</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_password_verify">Проверка пароля</string>
    <string name="invalid_name">Не действительное имя пользователя</string>
    <string name="invalid_email">Не действительное эл.почта</string>
    <string name="invalid_email_registered">Эл.почта зарегистрированный</string>
    <string name="invalid_email_unregistered">Эл.почта не зарегистрированный</string>
    <string name="invalid_password">Пароль должен быть >5 символов</string>
    <string name="invalid_password_verify">Пароль не совпадает</string>
    <string name="login_failed">"Ошибка входа в систему"</string>

    <string name="no_address">Пожалуйста, добавьте адрес и повторите попытку.</string>
    <string name="add_address">Добавить адрес</string>
    <string name="address_confirm_title">Удалить адрес?</string>
    <string name="address_confirm_message">Вы уверены, что хотите удалить этот адрес?</string>
    <string name="address">Адрес</string>
    <string name="prompt_mobile">Мобильный</string>
    <string name="prompt_flat">Квартира</string>
    <string name="prompt_street">Улица</string>
    <string name="prompt_city">Город</string>
    <string name="prompt_state">Государство</string>
    <string name="prompt_pinCode">PIN-код</string>
    <string name="invalid_mobile">Недействительный мобильный телефон</string>
    <string name="invalid_flat">Недействительный Квартира</string>
    <string name="invalid_street">Недействительный Улица</string>
    <string name="invalid_city">Недействительный Город</string>
    <string name="invalid_state">Недействительный Государство</string>
    <string name="invalid_pinCode">Недействительный PIN-код</string>

    <string name="file_books">Books.json</string>
    <string name="file_users">Users.json</string>
    <string name="userId">userId</string>

    <string name="demo_book_cart_count">0</string>
    <string name="remove">Удалять</string>
    <string name="add">Добавь</string>
    <string name="order">Заказ</string>
    <string name="orders">Заказы</string>
    <string name="order_placed">Размещенный заказ</string>
    <string name="shopping">Продолжать ходить по магазинам?</string>
    <string name="chose_delivery">Выберите адрес доставки</string>
    <string name="cart_empty">Корзина пуста</string>
    <string name="cart_add">Добавить в корзину</string>
    <string name="total_price">Итоговая цена:</string>
    <string name="demo_price">65000</string>
    <string name="added_cart">Добавлено в корзину</string>
    <string name="buy_proceed">Приступайте к покупке</string>
</resources>