<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--    <item
    android:id="@+id/search"
    android:icon="@drawable/search"
    android:title="@string/search_books"
    app:showAsAction="ifRoom" />-->
   <!--<item
       android:id="@+id/action_search"
       android:title="@string/search_books"
       android:icon="@drawable/search"
       android:orderInCategory="1"
       app:actionViewClass="androidx.appcompat.widget.SearchView"
       app:showAsAction="always|collapseActionView"/>-->
    <item
        android:id="@+id/wish_menu"
        android:icon="@drawable/ic_wish_menu"
        android:title="@string/wish"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/cart_menu_id"
        android:icon="@drawable/ic_cart"
        android:title="@string/title_cart"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/profile_menu"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/order_menu"
        android:title="@string/orders" />
    <item
        android:id="@+id/sign_out"
        android:title="@string/action_sign_out" />
</menu>