<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/delivery_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/delivery_item_mobile_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_margin_large"
        android:layout_marginLeft="@dimen/view_margin_large"
        android:layout_marginTop="@dimen/view_margin"
        android:layout_marginEnd="@dimen/view_margin_large"
        android:layout_marginRight="@dimen/view_margin_large"
        android:fontFamily="@font/firasans_regular"
        android:text="@string/prompt_mobile"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@color/black_color"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/delivery_item_flat_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_margin_large"
        android:layout_marginLeft="@dimen/view_margin_large"
        android:layout_marginTop="@dimen/view_margin"
        android:layout_marginEnd="@dimen/view_margin_large"
        android:layout_marginRight="@dimen/view_margin_large"
        android:fontFamily="@font/firasans_regular"
        android:text="@string/prompt_flat"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textColor="@color/blue_grey_800"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delivery_item_mobile_id"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/delivery_item_street_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_margin_large"
        android:layout_marginLeft="@dimen/view_margin_large"
        android:layout_marginTop="@dimen/view_margin"
        android:layout_marginEnd="@dimen/view_margin_large"
        android:layout_marginRight="@dimen/view_margin_large"
        android:fontFamily="@font/firasans_regular"
        android:text="@string/prompt_street"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textColor="@color/blue_grey_800"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delivery_item_flat_id"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/delivery_item_city_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_margin_large"
        android:layout_marginLeft="@dimen/view_margin_large"
        android:layout_marginTop="@dimen/view_margin"
        android:layout_marginEnd="@dimen/view_margin_large"
        android:layout_marginRight="@dimen/view_margin_large"
        android:fontFamily="@font/firasans_regular"
        android:text="@string/prompt_city"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textColor="@color/blue_grey_800"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delivery_item_street_id" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/delivery_item_state_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_margin_large"
        android:layout_marginLeft="@dimen/view_margin_large"
        android:layout_marginTop="@dimen/view_margin"
        android:layout_marginEnd="@dimen/view_margin_large"
        android:layout_marginRight="@dimen/view_margin_large"
        android:fontFamily="@font/firasans_regular"
        android:text="@string/prompt_state"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textColor="@color/blue_grey_800"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delivery_item_city_id" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/delivery_item_pinCode_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_margin_large"
        android:layout_marginLeft="@dimen/view_margin_large"
        android:layout_marginTop="@dimen/view_margin"
        android:layout_marginEnd="@dimen/view_margin_large"
        android:layout_marginRight="@dimen/view_margin_large"
        android:fontFamily="@font/firasans_regular"
        android:text="@string/prompt_pinCode"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textColor="@color/blue_grey_800"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delivery_item_state_id" />

    <View
        android:id="@+id/delivery_divider_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_margin"
        android:layout_marginTop="@dimen/view_margin_big"
        android:background="@color/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delivery_item_pinCode_id" />
</androidx.constraintlayout.widget.ConstraintLayout>