<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_cart_view_id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/view_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <ImageView
                android:id="@+id/cart_image_view_id"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/book_image"
                android:padding="@dimen/card_image_padding"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/view_text_margin"
                        android:layout_marginLeft="@dimen/view_text_margin"
                        android:layout_marginTop="@dimen/view_margin_big"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/cart_text_view_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/firasans_extrabold"
                            android:text="@string/book_name"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                            android:textColor="@color/black_color"
                            android:textSize="@dimen/text_size_large" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/cart_text_view_author"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/firasans_regular"
                            android:text="@string/book_author"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                            android:textColor="@color/black_color"
                            android:textSize="@dimen/text_size_normal" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/view_margin"
                            android:orientation="horizontal">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/cart_text_view_price"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/firasans_semibold"
                                android:text="@string/demo_book_price"
                                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                                android:textColor="@color/black_color"
                                android:textSize="@dimen/text_size_small" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/cart_text_view_mrp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/view_margin_small"
                                android:layout_marginLeft="@dimen/view_margin_small"
                                android:fontFamily="@font/firasans_regular"
                                android:text="@string/demo_book_price"
                                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                                android:textColor="@color/black_color"
                                android:textSize="@dimen/text_size_normal" />
                        </LinearLayout>

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/cart_text_view_saved"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/firasans_semibold"
                            android:text="@string/demo_book_price"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                            android:textColor="@color/green_500"
                            android:textSize="@dimen/text_size_normal" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/display_book_cart_id"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginEnd="@dimen/view_margin"
                        android:layout_marginRight="@dimen/view_margin"
                        android:layout_marginBottom="@dimen/view_margin_large"
                        android:padding="@dimen/view_margin_large">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageButton
                                android:id="@+id/display_book_cart_minus_id"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:background="@drawable/ic_minus"
                                android:contentDescription="@string/remove" />

                            <TextView
                                android:id="@+id/display_book_cart_value_id"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="@dimen/view_margin_large"
                                android:layout_marginLeft="@dimen/view_margin_large"
                                android:fontFamily="@font/firasans_regular"
                                android:text="@string/demo_book_cart_count"
                                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                                android:textColor="@color/black_color"
                                android:textSize="@dimen/text_size_large" />

                            <ImageButton
                                android:id="@+id/display_book_cart_add_id"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="@dimen/view_margin_large"
                                android:layout_marginLeft="@dimen/view_margin_large"
                                android:background="@drawable/ic_add"
                                android:contentDescription="@string/add" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>